--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,4 +1,4 @@
-name: Publish Package
+name: Publish Package (npmjs)
 
 on: workflow_dispatch
 
@@ -7,8 +7,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-        with:
-          ref: main
+        # with:
+        #   ref: main
 
       # Setup .npmrc file to publish to npm
       - uses: actions/setup-node@v3
@@ -16,8 +16,9 @@ jobs:
           node-version: "22.x"
           registry-url: "https://registry.npmjs.org"
 
-      # - run: npm ci
-
+      - run: npm i
+      - run: npm run compile
+      - run: npm run test
       - run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
