--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,4 +27,5 @@ jobs:
           cache: "npm"
       - run: npm i
       - run: npm run compile
+      - run: ls ; ls dist
       - run: npm run test
