--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,6 +25,9 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
           cache: "npm"
-      - run: npm i c8
+      - run: npm i
       - run: npm run compile
-      - run: npm run test
+      - run: ls ; ls dist
+      - run: |
+          node svgrast.js --help
+          npm run test
